2008-07-07 Juuso Alasuutari <iuso@sourcemage.org>
	* DETAILS, DEPENDS, PRE_BUILD, BUILD, INSTALL, paths_fix.patch:
	  Created spell.
