@@ -2,5 +2,5 @@ default_pre_build        &&
 cd  "$SOURCE_DIRECTORY"  &&
 
 patch -p1 < "$SCRIPT_DIRECTORY/paths_fix.patch"   &&
-sed -i  "s|/usr/lib|\"$INSTALL_ROOT/usr/lib\"|g"  \
+sed -i  "s|/usr|\"$INSTALL_ROOT/usr\"|g"  \
         src/webkittrunk.pri
