@@ -1,29 +1,25 @@
 diff --git a/src/webkittrunk.pri b/src/webkittrunk.pri
-index 3a5f417..d7e2256 100644
+index 322c22f..cb2a0ed 100644
 --- a/src/webkittrunk.pri
 +++ b/src/webkittrunk.pri
-@@ -1,18 +1,17 @@
+@@ -1,16 +1,14 @@
  #
  # export QT_WEBKIT=webkit_trunk
--# export WEBKITHOME=$HOME/dev/webkit/
-+# and set WEBKITHOME to the correct location
+-# export WEBKITBUILD=$HOME/dev/webkit/WebKitBuild/Release
  #
  CONFIG += $$(QT_WEBKIT)
  webkit_trunk {
-     message(Using WebKit Trunk)
--    WEBKITHOME = $$(WEBKITHOME)
+-    message(Using WebKit Trunk at $$(WEBKITBUILD))
+-    WEBKITBUILD = $$(WEBKITBUILD)/lib
++    message(Using WebKit Trunk)
      QT -= webkit
      DEFINES += WEBKIT_TRUNK
--    debug: QMAKE_LIBDIR_FLAGS = -L$$WEBKITHOME/WebKitBuild/Debug/lib
--    release: QMAKE_LIBDIR_FLAGS = -L$$WEBKITHOME/WebKitBuild/Release/lib
-+    debug: QMAKE_LIBDIR_FLAGS = -L/usr/lib
-+    release: QMAKE_LIBDIR_FLAGS = -L/usr/lib
+-    QMAKE_LIBDIR_FLAGS = -L$$WEBKITBUILD
++    QMAKE_LIBDIR_FLAGS = -L/usr/lib
      LIBS = -lQtWebKit
--    INCLUDEPATH = $$WEBKITHOME/WebKit/qt/Api $$INCLUDEPATH
--    release: QMAKE_RPATHDIR = $$WEBKITHOME/WebKitBuild/Release/lib $$QMAKE_RPATHDIR
--    debug: QMAKE_RPATHDIR = $$WEBKITHOME/WebKitBuild/Debug/lib $$QMAKE_RPATHDIR
+-    INCLUDEPATH = $$WEBKITBUILD/../../../WebKit/qt/Api $$INCLUDEPATH
+-    QMAKE_RPATHDIR = $$WEBKITBUILD $$QMAKE_RPATHDIR
 +    INCLUDEPATH = /usr/include $$INCLUDEPATH
-+    release: QMAKE_RPATHDIR = /usr/lib $$QMAKE_RPATHDIR
-+    debug: QMAKE_RPATHDIR = /usr/lib $$QMAKE_RPATHDIR
++    QMAKE_RPATHDIR = /usr/lib $$QMAKE_RPATHDIR
  }
  
